# fdmngr

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD.md
example/: CMakeLists.txt  quickstart.c  tcp_client.c  tcp_server.c
include/: fdmngr.h  fdmngr_socket.h  fdmngr_tool.h
single_include/: CMakeLists.txt  amalgamate_config.json  fdmngr.h
single_include/test/: already_include.cpp  already_include.h  main.cpp
src/: fdmngr.c  fdmngr_socket.c  fdmngr_tool.c
test/: CMakeLists.txt  fdmngr_add.cpp  fdmngr_create.cpp  fdmngr_destroy.cpp  fdmngr_poll.cpp  fdmngr_remove.cpp  fdmngr_socket_connect.cpp  fdmngr_socket_create.cpp  fdmngr_socket_create_tcp.cpp  fdmngr_socket_create_udp.cpp  fdmngr_socket_create_unix.cpp  fdmngr_socket_get_infos.cpp  fdmngr_tool_add_flags.cpp  fdmngr_tool_get_flags.cpp  fdmngr_tool_set_flags.cpp  fdmngr_tool_sub_flags.cpp
